# mcp-server-platform

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
config/: README.md  mcpo-config-template.json  mcpo-examples.json  mcpo.json  template.txt
docs/: AI_DEVELOPMENT_GUIDE.md  ARCHITECTURE.md  CLI_TOOL_SUMMARY.md  DEVELOPMENT.md  MCP_STANDARDS.md  OPENWEATHER_ENHANCEMENTS.md  OPEN_WEBUI_INTEGRATION.md  README.md  ROADMAP.md  SECURITY.md  SERVER_CREATION.md  STRUCTURE.md  configuration.md  development.md  overview.md  tools.md
mcp/servers/openweather/: README.md  openweather.py  pyproject.toml  run_uv.sh
mcp/shared/: version.py
mcp/shared/docs/: README.md
mcp/shared/templates/: README.md.template  pyproject.toml.template
scripts/: install_deps.sh
tests/: README.md  cleanup_data_mounts.py  test_mcp_structure.py  test_openweather.py
